[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
description-file = "README.md"
name = "detect_secrets"
version = "1.4.0"
authors = [{name = "Aaron Loo", email = "aaronloo@yelp.com"}]
license = {text = "Copyright Yelp, Inc. 2020"}
description = "Tool for detecting secrets in the codebase"
keywords = [
    "secret-management",
    "pre-commit",
    "security",
    "entropy-checks",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
]
dependencies = ["pyyaml", "requests"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/Yelp/detect-secrets"
Download = "https://github.com/Yelp/detect-secrets/archive/1.4.0.tar.gz"

[project.optional-dependencies]
word_list = ["pyahocorasick"]
gibberish = ["gibberish-detector"]

[project.scripts]
detect-secrets = "detect_secrets.main:main"
detect-secrets-hook = "detect_secrets.pre_commit_hook:main"

[tool.bumpversion]
current_version = "1.4.0"
commit = "True"
tag = "True"

[tool.bumpversion.file."detect_secrets/__version__".py]
search = "VERSION = '{current_version}'"
replace = "VERSION = '{new_version}'"

[tool.bumpversion.file."".secrets.baseline]
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.bumpversion.file.README.md]
search = "rev: v{current_version}"
replace = "rev: v{new_version}"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["test*"] # tmp*
namespaces = false

[tool.setuptools.package-data]
detect_secrets = ["py.typed"]
