[bumpversion]
current_version = 1.4.0
commit = True
tag = True

[metadata]
description_file = README.md
name = detect_secrets
version = 1.4.0
author = Aaron Loo
author_email = aaronloo@yelp.com
license = Copyright Yelp, Inc. 2020
description = Tool for detecting secrets in the codebase
keywords =
    secret-management
    pre-commit
    security
    entropy-checks
url = https://github.com/Yelp/detect-secrets
download_url = https://github.com/Yelp/detect-secrets/archive/1.4.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Utilities
    Environment :: Console
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Typing :: Typed

[options]
packages = find:
install_requires = pyyaml; requests
include_package_data = True

[bumpversion:file:detect_secrets/__version__.py]
search = VERSION = '{current_version}'
replace = VERSION = '{new_version}'

[options.packages.find]
exclude = test*; tmp*

[options.entry_points]
console_scripts =
    detect-secrets = detect_secrets.main:main
    detect-secrets-hook = detect_secrets.pre_commit_hook:main

[bumpversion:file:.secrets.baseline]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[bumpversion:file:README.md]
search = rev: v{current_version}
replace = rev: v{new_version}

[options.extras_require]
word_list = pyahocorasick
gibberish = gibberish-detector

[options.package_data]
detect_secrets = py.typed
