[bumpversion]
current_version = 1.4.0
commit = True
tag = True

[metadata]
description_file = README.md

[bumpversion:file:detect_secrets/__version__.py]
search = VERSION = '{current_version}'
replace = VERSION = '{new_version}'

[bumpversion:file:.secrets.baseline]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[bumpversion:file:README.md]
search = rev: v{current_version}
replace = rev: v{new_version}
